# chatstencil

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.ja.md  README.md  README.zh.md  pyproject.toml
docs/: template-subset.md
examples/: README.md
examples/fixtures/: multi-turn.json  no-system.json  smalltalk.json
examples/goldens/: multi-turn--chatml.golden.txt  no-system--chatml.golden.txt  smalltalk--support-bot.golden.txt
examples/templates/: support-bot.jinja
scripts/: smoke.sh
src/chatstencil/: __init__.py  __main__.py  cli.py  errors.py  evaluate.py  filters.py  fixtures.py  golden.py  lexer.py  nodes.py  parser.py  presets.py  runtime.py  template.py
tests/: conftest.py  test_cli.py  test_examples.py  test_expressions.py  test_filters.py  test_fixtures.py  test_golden.py  test_lexer.py  test_parser.py  test_presets.py  test_readme_example.py  test_statements.py
