[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatstencil"
version = "0.1.0"
description = "Renders chat templates against message fixtures and golden-tests the exact prompt strings across models."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "JaydenCJ" }]
keywords = ["chat-template", "prompt", "golden-testing", "jinja", "llm", "tokenizer", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Text Processing :: Markup",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
chatstencil = "chatstencil.cli:main"

[project.urls]
Homepage = "https://github.com/JaydenCJ/chatstencil"
Repository = "https://github.com/JaydenCJ/chatstencil"
Issues = "https://github.com/JaydenCJ/chatstencil/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
